# record-calculus

./: Main.hs  README  idea.hs  idea.txt  notes.mkd  rc.cabal  sk.rec  tricksy.rec
LP/: AST.hs  Object.hs  Parser.hs  Shell.hs
RC/: AST.hs  Main.hs  Parser.hs
examples/: sk.rec  tricksy.rec
